--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
 #eventList {
   margin: 10px;
   font-size: 24px;
-  color: #fff;
+  color: #000000;
   text-align: center; 
   font-weight: bold;
 }
